feat: swagger for comment model
